<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >
    <!-- 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
 	-->
 	
 	<RelativeLayout
 	    android:id = "@+id/titleRelLayout"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content" 
 		android:layout_gravity="center_horizontal"
 	    android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
 	    android:paddingRight="@dimen/activity_horizontal_margin"
 	    android:paddingTop="@dimen/activity_vertical_margin"
 	    >
 	    
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_message" />

    <TextView
        android:id="@+id/help_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/title_help_message" />
	</RelativeLayout>
	
 	<LinearLayout
 	    android:id="@+id/buttonLinearLayout"
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:gravity="center_horizontal"
 	    android:orientation="vertical"
 	    android:paddingLeft="16dp"
 	    android:paddingRight="16dp" >
 	
    	<TextView
    	    android:id="@+id/makeAlarmString"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/new_alarm_string"
    	    android:gravity="center_horizontal"
    	    />
    	
    	<Button 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/new_alarm_button_string"
    	    
    	    />
    	
    	
 	    </LinearLayout>
	
</LinearLayout>